# python-project-example

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
